--- a/JavaScript/clock/clock.html
+++ b/JavaScript/clock/clock.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <title>clock</title>
     <script type="text/javascript" src="clock.js"></script>
 </head>
 <body onload="drawClock()">
