--- a/JavaScript/clock/clock.html
+++ b/JavaScript/clock/clock.html
@@ -6,7 +6,7 @@
 </head>
     
 <body onload="drawClock()">
-
+<h1>The clock</h1>
 <canvas id="canvas" width="400" height="400" style="background-color:#333"></canvas>
 <script type="text/javascript" >
     var canvas = document.getElementById("canvas");
